# heap-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dominators.rs  graph.rs  index.rs  lib.rs  main.rs  parallel.rs  progress.rs  report.rs  retained.rs
src/testutil/: hprof.rs  mod.rs
tests/: analysis.rs  cli.rs
tests/common/: mod.rs
