[package]
name = "heap-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "heap_rs"
path = "src/lib.rs"

[[bin]]
name = "heap-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
jvm-hprof = "0.1"
memmap2 = "0.9"
rayon = "1"
rustc-hash = "2"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
