[package]
name = "heap-rs"
version = "1.2.0"
edition = "2024"
rust-version = "1.85"
description = "Fast CLI for analyzing Java .hprof heap dumps with retained sizes and retainer analysis"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LucaNerlich/heap-rs"
keywords = ["hprof", "heap", "java", "memory", "profiler"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "heap_rs"
path = "src/lib.rs"

[[bin]]
name = "heap-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
jvm-hprof = "0.1"
memmap2 = "0.9"
rayon = "1"
rustc-hash = "2"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
